<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.tno</groupId>
	<artifactId>oorti</artifactId>
	<version>0.0.0-git</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<name>oorti</name>
	<description>The Object Oriented RTI extends the HLA RTI interface with methods to work with Java Beans.</description>
	<url>https://github.com/TNO-MST/object-oriented-rti</url>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>TNO Mission Simulation and Training</name>
			<email>noreply@tno-mst.github.io</email>
			<organization>TNO</organization>
			<organizationUrl>https://tno-mst.github.io</organizationUrl>
		</developer>
	</developers>

	<issueManagement>
		<url>https://github.com/TNO-MST/object-oriented-rti/issues</url>
	</issueManagement>

	<scm>
		<connection>scm:git:git://github.com/TNO-MST/object-oriented-rti.git</connection>
		<developerConnection>scm:git:ssh://github.com:TNO-MST/object-oriented-rti.git</developerConnection>
		<url>https://github.com/TNO-MST/object-oriented-rti/tree/main</url>
	</scm>

	<dependencies>
		<dependency>
			<groupId>nl.tno</groupId>
			<artifactId>rti1516e</artifactId>
			<version>1.0.0</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>nl.tno</groupId>
			<artifactId>omt</artifactId>
			<version>1.0.0</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.eclipse</groupId>
			<artifactId>yasson</artifactId>
			<version>3.0.4</version>
			<type>jar</type>
		</dependency>

		<!-- TEST dependencies -->

		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>6.0.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
			</plugin>

			<!-- Plugins required for publishing to Maven Central -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<failOnError>false</failOnError>
					<additionalJOption>-Xdoclint:none</additionalJOption>
					<links>
						<link>https://javadoc.io/doc/nl.tno/rti1516e/latest/</link>
					</links>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.8</version>
				<configuration>
					<!-- Prevent gpg from using pinentry programs -->
					<gpgArguments>
						<arg>--pinentry-mode</arg>
						<arg>loopback</arg>
					</gpgArguments>
				</configuration>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.10.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
